--- a/app/view/index.html
+++ b/app/view/index.html
@@ -9,9 +9,17 @@
     <div class='center'>
         <div class='title'>Classify Macaca Images 🐻</div>
         <p>
-            Use images of <strong>teddy</strong> bears, <strong>black</strong> bears, <strong>grizzly</strong> bears, or
-            all three!
+            Use images of monkeys from these beautiful species!
         </p>
+        <ul>
+            <li>macaca arctoide</li>
+            <li>macaca fuscata</li>
+            <li>macaca nigra</li>
+            <li>macaca silenus</li>
+            <li>macaca sinica</li>
+            <li>macaca thibetana</li>
+            <li>macaca tonkeana</li>
+        </ul>
         <div class='content'>
             <div class='no-display'>
                 <input id='file-input'
@@ -36,6 +44,7 @@
             </div>
         </div>
     </div>
+    <div>Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" 			    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 			    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
 </div>
 </body>
 </html>
