--- a/app/view/index.html
+++ b/app/view/index.html
@@ -7,9 +7,9 @@
 <body>
 <div>
     <div class='center'>
-        <div class='title'>Classify Macaca Images 🐻</div>
+        <div class='title'>Es tu sûr de ton macaque ?/div>
         <p>
-            Use images of monkeys from these beautiful species!
+            Découvre si ton macaque est bien de l'espèce qu'il prétend !!
         </p>
         <ul>
             <li>macaca arctoide</li>
@@ -37,7 +37,7 @@
                 <img id='image-picked' class='no-display' alt='Chosen Image' height='200'>
             </div>
             <div class='analyze'>
-                <button id='analyze-button' class='analyze-button' type='button' onclick='analyze()'>Analyze</button>
+                <button id='analyze-button' class='analyze-button' type='button' onclick='analyze()'>Je veux la vérité</button>
             </div>
             <div class='result-label'>
                 <label id='result-label'></label>
